--- a/client/src/assets/css/style.css
+++ b/client/src/assets/css/style.css
@@ -28,4 +28,19 @@
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
           box-shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
 }
+
+.gameStat {
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  width: 200px;
+  background: #fff;
+  border-radius: 16px;
+  border: none;
+  padding: 12px;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
 /*# sourceMappingURL=style.css.map */
