--- a/client/src/components/Recycle/Recycle.css
+++ b/client/src/components/Recycle/Recycle.css
@@ -5,7 +5,7 @@
   }
 }
 
-.heading {
+/* .heading {
     font-size: 10rem;
     font-weight: 900;
 }
@@ -19,4 +19,4 @@
 
 img {
     height: 450px;
-}
+} */
