--- a/client/src/components/Register/Register.css
+++ b/client/src/components/Register/Register.css
@@ -1,9 +1,10 @@
 .contain{
     background-image: linear-gradient(#f6e8e7, #fcf0e4);
-    padding-left: 20%;
-    padding-right: 20%;
-    padding-top: 5%;
+    padding-left: 35%;
+    padding-right: 35%;
+    padding-top: 2%;
     position: relative;
+    align-content: center;
 }
 
 .contain{body{
@@ -16,7 +17,6 @@
     padding: 3%;
     height: 600px;
     width: 400px;
-    margin-left: 400px;
 }
 
 .welcome-header {
