--- a/client/src/assets/css/style.scss
+++ b/client/src/assets/css/style.scss
@@ -1,4 +1,5 @@
 $shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
+$gameBtnColor: rgb(247, 37, 133);
 .cursor-pointer {
   cursor: pointer;
 }
@@ -10,11 +11,13 @@ $shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
   height: 250px;
   border-radius: 1.5rem;
   border-width: 5px;
+  background-color: rgba(255, 255, 255, 0.75);
   &:hover {
     box-shadow: $shadow;
   }
   .diceValue {
     font-size: 5rem;
+    font-weight: bold;
   }
 }
 .selectedValue {
@@ -32,4 +35,45 @@ $shadow: 0 3px 6px rgba(0, 0, 0, 0.25);
   border: none;
   padding: 12px;
   user-select: none;
+}
+.actionBar {
+  position: absolute;
+  top: 85%;
+  left: 50%;
+  transform: translateX(-50%);
+  .gameHint {
+    padding: 8px 64px !important;
+    border-radius: 4px;
+    border: none;
+    background-color: rgba(255, 255, 255, 0.25) !important;
+    box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.25);
+  }
+}
+.gameCard {
+  height: 300px;
+  display: grid;
+  place-items: center;
+  border-radius: 16px;
+  cursor: pointer;
+  background: rgba(255, 255, 255, 0.75);
+  &:hover {
+    box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.25);
+  }
+  &:active {
+    box-shadow: inset 4px 4px 12px rgba(0, 0, 0, 0.25);
+  }
+}
+.type-h1 {
+  font-size: 4rem;
+}
+.screenCenter {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+  background: url("./gameBg.jpeg");
 }
